--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fraud Detection System | Real-time Banking Transaction Monitoring</title>
+    <title>Banking Fraud Detection Simulation | Real-time Banking Transaction Monitoring</title>
     <meta name="description" content="Enterprise-grade fraud detection dashboard for real-time monitoring of banking transactions and suspicious activity alerts." />
     <meta name="author" content="Banking Security" />
 
-    <meta property="og:title" content="Fraud Detection System" />
+    <meta property="og:title" content="Banking Fraud Detection Simulation" />
     <meta property="og:description" content="Real-time banking transaction monitoring and fraud detection" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
